<resources>
    <string name="app_name">fitapp</string>

    <string name="add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>

    <string name="bottom_bar_training">Training</string>
    <string name="bottom_bar_steps">Steps</string>
    <string name="bottom_bar_macro">Macro</string>
    <string name="bottom_bar_food">Food</string>
    <string name="bottom_bar_natural">Nutritions</string>

    <string name="carbohydrates">Carbohydrates - </string>
    <string name="proteins">Proteins - </string>
    <string name="fat">Fat - </string>

    <string name="step_counter_title">Step counter</string>
    <string name="muscles_parts">Muscles parts</string>
    <string name="exercise">Exercise</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="add_exercise">Add exercise</string>

    <string name="enter_amout_of_calories">Enter the amount of calories</string>

    <string name="no_sensor_found">No sensor found.</string>

    <string name="calculate_calories">Calculate calories</string>
    <string name="macro_presets">Presets</string>
    <string name="natural_language_foods_header_text">Enter a query to see how it works. Application support tens of thousands of foods, including international dishes.</string>

    <string name="qty">Qty: </string>
    <string name="unit">Unit: </string>
    <string name="food">Food: </string>
    <string name="calories">Calories: </string>
    <string name="weight">Weight: </string>
    <string name="food_group">Food Group</string>
    <string name="calories_result">Overall calories: </string>
    <string name="calories_from_fat">Calories from fat: </string>
    <string name="total_fat">Total fat: </string>
    <string name="cholesterol">Cholesterol: </string>
    <string name="sodium">Sodium: </string>
    <string name="potassium">Potassium: </string>
    <string name="sugars">Sugars: </string>
    <string name="protein">Protein: </string>
    <string name="total_carbohydrates">Total Carbohydrates: </string>
    <string name="nutrition_facts">Nutrition Facts</string>

    <string name="distance">Distance: %.2f km</string>
    <string name="burned_calories">Calories: %d kcal</string>

    <string name="step_counter_set_goal">Set goal</string>
    <string name="step_counter_turn_off">Stop step counting</string>
    <string name="step_counter_turn_on">Start step counting</string>
    <string name="type_goal">Type goal</string>
    <string name="step_counter_history">Steps History</string>
    <string name="step_counter_history_steps">%d steps</string>

    <string name="workouts">Workouts</string>
    <string name="workout_details">Workout details</string>
    <string name="workout_name">Workout name</string>
    <string name="workout_details_error">Something went wrong :(</string>
    <string name="update_workout">Update workout</string>
    <string name="delete_workout">Delete workout</string>
    <string name="workout_empty_name">Workout name cannot be empty!</string>
    <string name="editing_workout">Editing: %s %s x %s</string>

    <string name="muscle_title">Muscle: </string>
    <string name="exercise_title">Exercise: </string>
    <string name="deleted_workout_successful">%s workout has been deleted</string>
    <string name="error_add_exercise">Missing input informations</string>
    <string name="delete_workout_dialog_title">Deleting exercise</string>
    <string name="delete_workout_dialog_description">Are you sure you want to delete this exercise?</string>

    <string name="auto_step_count">Auto Step Counting</string>
    <string name="notifications">Notifications</string>
    <string name="automatic_step_counter_text">StepCounter automatically records your steps</string>
    <string name="channel_name">StepService notification channel</string>
    <string name="channel_id">STEPSERVICE CHANNEL</string>
    <integer name="step_counter_notification_id">1</integer>

</resources>
