<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.sport.project.fitapp.ui.workouts.ui.workoutsdialog.WorkoutsDialogViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/WorkoutsFragmentDialog"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/WorkoutsFragmentDialog"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="6dp"
                android:paddingEnd="16dp"
                android:theme="@style/WorkoutsFragmentDialog"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/mr_dialog_close_light" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/workout_name_input_layout"
                    style="@style/InputLayoutOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/workout_name"
                    android:textColorHint="@color/colorPrimary"
                    android:theme="@style/InputLayoutOutlined"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidth="2dp"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/workout_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="text"
                        android:text="@={viewModel.workoutName}"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/muscle_part_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/muscles_parts"
                    android:textColorHint="@color/colorPrimary"
                    android:theme="@style/InputLayoutOutlined"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidth="2dp"
                    app:hintEnabled="true"
                    app:layout_constraintTop_toBottomOf="@id/workout_name_input_layout">

                    <AutoCompleteTextView
                        android:id="@+id/muscle_part_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.muscleName}"
                        android:cursorVisible="false"
                        android:focusable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/exercise_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/exercise"
                    android:textColorHint="@color/colorPrimary"
                    android:theme="@style/InputLayoutOutlined"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidth="2dp"
                    app:hintEnabled="true"
                    app:layout_constraintTop_toBottomOf="@id/muscle_part_layout">

                    <AutoCompleteTextView
                        android:id="@+id/exercise_menu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.exerciseName}"
                        android:cursorVisible="false"
                        android:focusable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/workout_sets"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/sets"
                    android:textColorHint="@color/colorPrimary"
                    android:theme="@style/InputLayoutOutlined"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidth="2dp"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/exercise_layout">

                    <AutoCompleteTextView
                        android:id="@+id/sets_menu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.sets}"
                        app:setWorkoutsDialogAdapter="@{12}"
                        android:cursorVisible="false"
                        android:focusable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mr_dialog_close_dark"
                    android:tint="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/workout_sets"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/workout_sets" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/workout_reps"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/reps"
                    android:textColorHint="@color/colorPrimary"
                    android:theme="@style/InputLayoutOutlined"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidth="2dp"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@id/exercise_layout">

                    <AutoCompleteTextView
                        android:id="@+id/reps_menu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.reps}"
                        app:setWorkoutsDialogAdapter="@{24}"
                        android:cursorVisible="false"
                        android:focusable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/sets_reps_bottom_barrier"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="workout_reps,workout_sets" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_exercise_to_workout"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:paddingTop="@dimen/margin_small"
                    android:paddingBottom="@dimen/margin_small"
                    android:paddingStart="@dimen/margin_normal"
                    android:paddingEnd="@dimen/margin_normal"
                    android:backgroundTint="@color/logoColor"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white"
                    android:text="@string/add_exercise"
                    android:onClick="@{() -> viewModel.addExercise()}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sets_reps_bottom_barrier"
                    tools:text="Add exercise"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/exercises_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_exercise_to_workout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_food"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>